--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -32,7 +32,7 @@ footer {
     }
   }
   .inner_wrapper.footer-nav {
-    background-color: $white;
+    background-color: $darkgray;
     text-align: center;
     .block {
       padding: 0.2rem;
@@ -106,7 +106,7 @@ footer {
         list-style: none;
         display: inline-block;
         a {
-          color: $black;
+          color: $white;
           font-size: $header-size / 3.5;
           padding-right: 0.5rem;
           &:after {
@@ -129,7 +129,7 @@ footer {
     width: 100%;
     h6 {
       margin: 0;
-      color: $black;
+      color: $white;
     }
   }
 }
