--- a/scss/_page-states.scss
+++ b/scss/_page-states.scss
@@ -11,19 +11,19 @@
 .bottom_row{
   .sub-page{
     &:nth-child(1){
-      background: linear-gradient(to right, rgba(27, 159, 214, 0.8) 0%, rgba(27, 159, 214, 0.8) 100%), url("../img/nav-block-one.jpg") center center / cover no-repeat;
+      background: linear-gradient(to right, rgba($brand-one, 0.8) 0%, rgba($brand-one, 0.8) 100%), url("../img/nav-block-one.jpg") center center / cover no-repeat;
     }
     &:nth-child(2){
-      background: linear-gradient(to right, rgba(27, 159, 214, 0.8) 0%, rgba(27, 159, 214, 0.8) 100%), url("../img/nav-block-two.jpg") center center / cover no-repeat;
+      background: linear-gradient(to right, rgba($brand-one, 0.8) 0%, rgba($brand-one, 0.8) 100%), url("../img/nav-block-two.jpg") center center / cover no-repeat;
     }
     &:nth-child(3){
-      background: linear-gradient(to right, rgba(27, 159, 214, 0.8) 0%, rgba(27, 159, 214, 0.8) 100%), url("../img/nav-block-three.jpg") center center / cover no-repeat;
+      background: linear-gradient(to right, rgba($brand-one, 0.8) 0%, rgba($brand-one, 0.8) 100%), url("../img/nav-block-three.jpg") center center / cover no-repeat;
     }
     &:nth-child(4){
-      background: linear-gradient(to right, rgba(27, 159, 214, 0.8) 0%, rgba(27, 159, 214, 0.8) 100%), url("../img/nav-block-four.jpg") center center / cover no-repeat;
+      background: linear-gradient(to right, rgba($brand-one, 0.8) 0%, rgba($brand-one, 0.8) 100%), url("../img/nav-block-four.jpg") center center / cover no-repeat;
     }
     &:nth-child(5){
-      background: linear-gradient(to right, rgba(27, 159, 214, 0.8) 0%, rgba(27, 159, 214, 0.8) 100%), url("../img/nav-block-four.jpg") center center / cover no-repeat;
+      background: linear-gradient(to right, rgba($brand-one, 0.8) 0%, rgba($brand-one, 0.8) 100%), url("../img/nav-block-four.jpg") center center / cover no-repeat;
     }
   }
 }
@@ -32,7 +32,12 @@
 .home-wrapper{
   .top_row{
     .hero{
-      background:linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%),  url('../img/hero-one.jpg') center center / cover no-repeat;
+      background:
+              url('../img/curve.png')no-repeat,
+              url('../img/hero-one.jpg') center center / cover no-repeat,
+              linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%);
+
+
       @media only screen and (max-width: 750px) {
         background:linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%),  url('../img/hero-one-mobile.jpg') center center / cover no-repeat;
 
