--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -5,21 +5,6 @@
   @return ($px / $base) * 1rem;
 }
 
-$white: #ffffff;
-$gray: #C0C0C0;
-$darkgray: #797979;
-$black: #2b2b2b;
-
-$brand-one: #1B9FD6;
-$brand-two: #A1DAF8;
-$brand-three: #0069B4;
-$brand-four: #41C0F0;
-
-$brand-five: #FFE082;
-$brand-six: #F7A700;
-$brand-seven: #F08300;
-
-
 
 
 
@@ -117,7 +102,7 @@ $blockquote-line-height: 1.5em;
 $blockquote-margin: 0;
 
 // Links
-$link-color: #4eaff6;
+$link-color: $brand-one;
 
 // hr
 $hr-margin: 30px;
@@ -147,7 +132,6 @@ h1, h2, h3, h4, h5, h6 {
   color: $header-color;
   font-family: $header-font-family;
   line-height: $header-line-height;
-  font-weight: 700;
 }
 
 // Heading One Styles
@@ -162,7 +146,6 @@ h1, h2, h3, h4, h5, h6 {
 // Styleguide typography.heading-one
 h1 {
   font-size: $header-size * 1.2;
-  text-transform: uppercase;
   strong {
     font-size: $header-size * 1.2;
     font-weight: 800;
@@ -192,7 +175,6 @@ h1 {
 // Styleguide typography.heading-two
 h2 {
   font-size: $header-size / 1.4;
-  text-transform: uppercase;
   font-weight: 400;
 
   strong {
@@ -224,7 +206,6 @@ h2 {
 h3, h3 span {
   font-size: $header-size / 1.5;
   font-weight: 400;
-  text-transform: uppercase;
 
   strong {
     font-size: $header-size / 1.5;
@@ -246,7 +227,6 @@ h3, h3 span {
 h4 {
   font-size: $header-size / 1.9;
   font-weight: 400;
-  text-transform: uppercase;
 
   a, strong, span {
     font-size: $header-size / 1.9;
