--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,35 +1,35 @@
+.ticker {
+  background-color: $white;
+  width: 100vw;
+  display: inline-flex;
+  height: 5vh;
+  border-left: 5px solid $brand-one;
+  border-bottom: 1px solid $brand-one;
+  padding-left: 1rem;
+  box-sizing: border-box;
+  //display: none;
+
+  * {
+    color: $black;
+  }
+  .block {
+    width: auto;
+    margin-right: 20px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 120px;
+    h6 {
+      margin: 0;
+      padding: 0 1rem;
+      border-right: 2px solid $black;
+    }
+  }
+}
 footer {
   position: relative;
   @media only screen and (min-width: 750px) {
     height: 10vh;
-  }
-  .inner_wrapper.ticker {
-    background-color: $white;
-    width: 100vw;
-    //display: inline-flex;
-    height: 5vh;
-    border-left: 5px solid $brand-one;
-    border-bottom: 1px solid $brand-one;
-    padding-left: 1rem;
-    box-sizing: border-box;
-    display: none;
-
-    * {
-      color: $black;
-    }
-    .block {
-      width: auto;
-      margin-right: 20px;
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      min-width: 120px;
-      h6 {
-        margin: 0;
-        padding: 0 1rem;
-        border-right: 2px solid $black;
-      }
-    }
   }
   .inner_wrapper.footer-nav {
     background-color: $darkgray;
