--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -30,6 +30,7 @@
     }
     &:nth-of-type(2) {
       background-color: $brand-one;
+      font-weight: 600;
     }
     &:nth-of-type(3) {
       background-color: rgba($black, 0.7);
