--- a/scss/_draw-styles.scss
+++ b/scss/_draw-styles.scss
@@ -11,6 +11,9 @@
   @media only screen and (max-width: 1000px) {
     width: 100%;
   }
+  @media only screen and (max-width: 900px) {
+    flex: 1 1 50%;
+  }
   & > div {
     padding: 1rem;
 
@@ -112,6 +115,9 @@
     *:not(a) {
       color: $black;
     }
+    h3, h3 strong {
+      color: $brand-one;
+    }
     @media only screen and (min-width: 1000px) {
       flex: 1 1 30%;
     }
@@ -171,10 +177,28 @@
 
 //STEP TWO
 .block.step-two {
+  background-color: $brand-one;
   form {
     margin-top: 0.5rem;
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+      color: $brand-one;
+
+    }
+
+    ::-moz-placeholder { /* Firefox 19+ */
+      color: $brand-one;
+    }
+
+    :-ms-input-placeholder { /* IE 10+ */
+      color: $brand-one;
+    }
+
+    :-moz-placeholder { /* Firefox 18- */
+      color: $brand-one;
+    }
 
   }
+
 }
 
 //STEP THREE
@@ -194,6 +218,10 @@
 
 //STEP FOUR
 .block.step-four {
+  *:not(a){
+    color: $white;
+  }
+  background-color: $brand-one;
   & > div {
     flex: 1 1 30%;
   }
@@ -203,14 +231,13 @@
   .inner_mid {
     display: inherit;
     flex-direction: column;
+
     .social {
       margin-bottom: 1rem;
       button {
-        background: $brand-one;
-        padding: 0.5rem;
-        border-radius: 60%;
         &:before {
           color: $white;
+          font-size: 2rem;
         }
       }
     }
