--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,16 +1,13 @@
 .ticker {
-  background-color: $white;
-  width: 100vw;
+  background-color: $brand-one;
+  width: 100%;
   display: inline-flex;
   height: 5vh;
-  border-left: 5px solid $brand-one;
-  border-bottom: 1px solid $brand-one;
   padding-left: 1rem;
   box-sizing: border-box;
   //display: none;
-
   * {
-    color: $black;
+    color: $white;
   }
   .block {
     width: auto;
@@ -22,10 +19,11 @@
     h6 {
       margin: 0;
       padding: 0 1rem;
-      border-right: 2px solid $black;
+      border-right: 2px solid $white;
     }
   }
 }
+
 footer {
   position: relative;
   @media only screen and (min-width: 750px) {
