--- a/scss/_page-states.scss
+++ b/scss/_page-states.scss
@@ -55,7 +55,7 @@
     .hero{
       background:
               url('../img/curve.png')top center / contain no-repeat,
-              url('../img/hero-one.jpg') center center / cover no-repeat,
+              url('../img/hero-two.jpg') center center / cover no-repeat,
               linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%);
 
       @media only screen and (max-width: 750px) {
@@ -89,7 +89,7 @@
     .hero{
       background:
               url('../img/curve.png')top center / contain no-repeat,
-              url('../img/hero-one.jpg') center center / cover no-repeat,
+              url('../img/hero-two.jpg') center center / cover no-repeat,
               linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%);
       @media only screen and (max-width: 750px) {
         background:linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%),  url('../img/hero-two-mobile.jpg') center center / cover no-repeat;
