--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -16,9 +16,17 @@ form {
   display: inline-block;
   width: 100%;
   box-sizing: border-box;
-  margin-bottom: 0.8rem;
+  margin-bottom: .8rem;
+  margin-right: .8rem;
+  max-width: 400px;
   &.half {
     width: 49%;
+    @media only screen and (max-width: 600px) {
+      width: 100%;
+    }
+  }
+  &.three {
+    width: 33%;
     @media only screen and (max-width: 600px) {
       width: 100%;
     }
