added ticker and carousel
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,9 @@
 @import "global";
 @import "typography";
 
+@import "vendor/slick";
+@import "vendor/slick-theme";
+
 @import "forms";
 @import "main-pages";
 @import "secondary-pages";
