--- a/scss/_draw-styles.scss
+++ b/scss/_draw-styles.scss
@@ -105,6 +105,7 @@
       img {
         display: inline-block;
         max-width: 100px;
+        max-height: 100px;
       }
       p, h1, h2, h3, h4, h5, h6 {
         display: inline-block;
