--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,29 +1,12 @@
-.ticker {
-  background-color: $brand-one;
-  width: 100%;
-  display: inline-flex;
-  height: 5vh;
-  padding-left: 1rem;
-  box-sizing: border-box;
-  //display: none;
-  * {
-    color: $white;
-  }
-  .block {
-    width: auto;
-    margin-right: 20px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 120px;
-    h6 {
-      margin: 0;
-      padding: 0 1rem;
-      border-right: 2px solid $white;
-    }
+.inner_wrapper.ticker{
+  z-index: 40;
+  position: relative;
+  .block{
+    z-index: 40;
+    position: relative;
+
   }
 }
-
 footer {
   position: relative;
   @media only screen and (min-width: 750px) {
