--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,11 +1,11 @@
 .block.hero {
-  padding: 2rem 6rem 2rem 2rem;
   width: 60%;
   display: inline-flex;
   justify-content: flex-end;
   align-items: flex-start;
   flex-direction: column;
   flex: 1 1 60%;
+  background-blend-mode: multiply;
   @media only screen and (min-width: 1000px) {
     min-width: 600px;
   }
@@ -17,32 +17,37 @@
     padding: 2rem 2rem 2rem 2rem;
     text-align: right;
   }
-  * {
-    color: $white;
 
-  }
-  h1 {
-    display: inline-block;
-    padding: .5rem 1rem;
-    margin: 0.5rem 0;
-    &:nth-of-type(1) {
-      background-color: rgba($black, 0.7);
+  .slider {
+    width: 100%;
+    height: 100%;
+    .slick-list, .slick-track {
+      height: 100%;
+      .slick-slide{
+        &>div{
+          height: 100%;
+        }
+      }
     }
-    &:nth-of-type(2) {
-      background-color: $brand-one;
-      font-weight: 600;
-    }
-    &:nth-of-type(3) {
-      background-color: rgba($black, 0.7);
-    }
+    .inner_slide {
+      padding: 2rem 6rem 2rem 2rem;
+      height: 100%;
+      display: inline-flex!important;
+      justify-content: flex-end;
+      align-items: flex-end;
+      * {
+        width: 100%;
+        color: $white;
+      }
+      h1 {
+        margin-bottom: 0;
 
+      }
+      h4 {
+        margin-bottom: 0;
+        text-transform: inherit;
+      }
+    }
   }
-  h4 {
-    margin-bottom: 0;
-    text-transform: inherit;
-    padding: .5rem 1rem;
-    display: inline-block;
-    background-color: $darkgray;
-    max-width: 70%;
-  }
+
 }
