--- a/scss/_page-states.scss
+++ b/scss/_page-states.scss
@@ -1,16 +1,37 @@
 //GENERIC FOR ALL PAGES
-.top_row{
-  .hero{
-    background:
-            url('../img/curve.png')center center / cover no-repeat,
-            url('../img/hero-one.jpg') center center / cover no-repeat,
-            linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%);
-    @media only screen and (max-width: 750px) {
-      background:linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%),  url('../img/hero-one-mobile.jpg') center center / cover no-repeat;
+.top_row {
+  .hero {
+    .slider {
+      div.slick-slide:nth-of-type(1) {
+        color: #000;
+        .inner_slide {
+          background:
+                  url('../img/curve.png') top center / contain no-repeat,
+                  url('../img/hero-one.jpg') center center / cover no-repeat,
+          linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%);
+          @media only screen and (max-width: 750px) {
+            background: linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%), url('../img/hero-one-mobile.jpg') center center / cover no-repeat;
 
+          }
+        }
+      }
+      div.slick-slide:nth-of-type(2) {
+        color: #000;
+        .inner_slide {
+          background:
+                  url('../img/curve.png') top center / contain no-repeat,
+                  url('../img/hero-two.jpg') center center / cover no-repeat,
+                  linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%);
+          @media only screen and (max-width: 750px) {
+            background: linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%), url('../img/hero-two-mobile.jpg') center center / cover no-repeat;
+
+          }
+        }
+      }
     }
   }
 }
+
 .bottom_row{
   .sub-page{
     &:nth-child(1){
@@ -29,90 +50,4 @@
       background: linear-gradient(to right, rgba($brand-one, 0.8) 0%, rgba($brand-one, 0.8) 100%), url("../img/nav-block-four.jpg") center center / cover no-repeat;
     }
   }
-}
-
-// PAGE SPECIFIC OVERRIDES
-.home-wrapper{
-  .top_row{
-    .hero{
-      background:
-              url('../img/curve.png')top center / contain no-repeat,
-              url('../img/hero-one.jpg') center center / cover no-repeat,
-              linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%);
-
-
-      @media only screen and (max-width: 750px) {
-        background:linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%),  url('../img/hero-one-mobile.jpg') center center / cover no-repeat;
-
-      }
-    }
-  }
-  .bottom_row{}
-}
-
-.step-one-wrapper{
-  .top_row{
-    .hero{
-      background:
-              url('../img/curve.png')top center / contain no-repeat,
-              url('../img/hero-two.jpg') center center / cover no-repeat,
-              linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%);
-
-      @media only screen and (max-width: 750px) {
-        background:linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%),  url('../img/hero-two-mobile.jpg') center center / cover no-repeat;
-
-      }
-    }
-  }
-  .bottom_row{}
-}
-
-.step-two-wrapper{
-  .top_row{
-    .hero{
-      background:
-              url('../img/curve.png')top center / contain no-repeat,
-              url('../img/hero-one.jpg') center center / cover no-repeat,
-              linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%);
-
-      @media only screen and (max-width: 750px) {
-        background:linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%),  url('../img/hero-one-mobile.jpg') center center / cover no-repeat;
-
-      }
-    }
-  }
-  .bottom_row{}
-}
-
-.step-three-wrapper{
-  .top_row{
-    .hero{
-      background:
-              url('../img/curve.png')top center / contain no-repeat,
-              url('../img/hero-two.jpg') center center / cover no-repeat,
-              linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%);
-      @media only screen and (max-width: 750px) {
-        background:linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%),  url('../img/hero-two-mobile.jpg') center center / cover no-repeat;
-
-      }
-    }
-  }
-  .bottom_row{}
-}
-
-.step-four-wrapper{
-  .top_row{
-    .hero{
-      background:
-              url('../img/curve.png')top center / contain no-repeat,
-              url('../img/hero-one.jpg') center center / cover no-repeat,
-              linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%);
-
-      @media only screen and (max-width: 750px) {
-        background:linear-gradient(to bottom, rgba(32,124,202,0) 0%,rgba(16,62,101,0) 50%,rgba(8,30,48,0.3) 76%,rgba(0,0,0,0.5) 100%),  url('../img/hero-one-mobile.jpg') center center / cover no-repeat;
-
-      }
-    }
-  }
-  .bottom_row{}
 }
