--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -36,16 +36,31 @@
       justify-content: flex-end;
       align-items: flex-end;
       * {
-        width: 100%;
         color: $white;
+        display: block;
       }
       h1 {
-        margin-bottom: 0;
+        display: inline-block;
+        padding: .5rem 1rem;
+        margin: 0.5rem 0;
+        &:nth-of-type(1) {
+          background-color: rgba($black, 0.7);
+        }
+        &:nth-of-type(2) {
+          background-color: $brand-one;
+        }
+        &:nth-of-type(3) {
+          background-color: rgba($black, 0.7);
+        }
 
       }
       h4 {
         margin-bottom: 0;
         text-transform: inherit;
+        padding: .5rem 1rem;
+        display: inline-block;
+        background-color: $darkgray;
+        max-width: 70%;
       }
     }
   }
