--- a/scss/_page-states.scss
+++ b/scss/_page-states.scss
@@ -47,7 +47,40 @@
       background: linear-gradient(to right, rgba($brand-one, 0.8) 0%, rgba($brand-one, 0.8) 100%), url("../img/nav-block-four.jpg") center center / cover no-repeat;
     }
     &:nth-child(5){
-      background: linear-gradient(to right, rgba($brand-one, 0.8) 0%, rgba($brand-one, 0.8) 100%), url("../img/nav-block-four.jpg") center center / cover no-repeat;
+      background: linear-gradient(to right, rgba($brand-one, 0.8) 0%, rgba($brand-one, 0.8) 100%), url("../img/nav-block-five.jpg") center center / cover no-repeat;
+    }
+  }
+}
+.home-wrapper{}
+.second-chance-wrapper{
+  .top_row {
+    .hero {
+      .slider {
+        div.slick-slide:nth-of-type(1) {
+          .inner_slide {
+            background:
+                    url('../img/curve.png') top center / contain no-repeat,
+                    url('../img/second-chance-hero.jpg') top center / cover no-repeat,
+                    linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%);
+            @media only screen and (max-width: 750px) {
+              background: linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%), url('../img/hero-one-mobile.jpg') center center / cover no-repeat;
+
+            }
+          }
+        }
+        div.slick-slide:nth-of-type(2) {
+          .inner_slide {
+            background:
+                    url('../img/curve.png') top center / contain no-repeat,
+                    url('../img/hero-two.jpg') center center / cover no-repeat,
+                    linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%);
+            @media only screen and (max-width: 750px) {
+              background: linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%), url('../img/hero-two-mobile.jpg') center center / cover no-repeat;
+
+            }
+          }
+        }
+      }
     }
   }
 }
