--- a/scss/_side-bar.scss
+++ b/scss/_side-bar.scss
@@ -24,7 +24,7 @@ header.block.side_bar {
     flex: 0 1 10%;
   }
   @media only screen and (max-width: 1000px) {
-    padding: 0 1rem 0 15rem;
+    padding: 25px 1rem 0 15rem;
     width: 100%;
     max-width: unset;
     ul {
