updates colourin footer
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -38,6 +38,7 @@ footer {
     }
   }
   .inner_wrapper.acred {
+    background-color: $darkgray;
     width: 100%;
     height: 100%;
     display: inline-flex;
