updates to style for colours
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -55,9 +55,7 @@ button{
   }
 
 }
-input{
-  color:$white;
-}
+
 input[type=submit] {
   width: auto;
   float: right;
@@ -85,20 +83,7 @@ input[type=number] {
 :-moz-placeholder { /* Firefox 18- */
   color: $white;
 }
-.group.tabbed {
-   ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-     color: $brand-one;
-   }
-   ::-moz-placeholder { /* Firefox 19+ */
-     color: $brand-one;
-   }
-   :-ms-input-placeholder { /* IE 10+ */
-     color: $brand-one;
-   }
-   :-moz-placeholder { /* Firefox 18- */
-     color: $brand-one;
-   }
- }
+
 
 .button-primary.choices {
   background: $grey;
@@ -157,5 +142,27 @@ input[type=number] {
   }
   @media only screen and (max-width: 768px) {
     padding: 15px 25px;
+  }
+}
+
+.step-two, {
+  form{
+    input{
+      color:$white;
+    }
+    .group.tabbed {
+      ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        color: $brand-one;
+      }
+      ::-moz-placeholder { /* Firefox 19+ */
+        color: $brand-one;
+      }
+      :-ms-input-placeholder { /* IE 10+ */
+        color: $brand-one;
+      }
+      :-moz-placeholder { /* Firefox 18- */
+        color: $brand-one;
+      }
+    }
   }
 }
