--- a/scss/_draw-styles.scss
+++ b/scss/_draw-styles.scss
@@ -6,8 +6,10 @@
   min-width: 250px;
   display: inline-flex;
   justify-content: space-between;
-  flex: 1 1 300px;
 
+  @media only screen and (min-width: 1000px) {
+    flex: 1 1 300px;
+  }
   @media only screen and (max-width: 1000px) {
     width: 100%;
   }
