--- a/scss/_draw-styles.scss
+++ b/scss/_draw-styles.scss
@@ -36,20 +36,7 @@
     text-align: left;
   }
 
-  form {
-    legend {
-      h4 {
-        color: $white;
-      }
-    }
-    label {
-      color: $white;
-    }
-    .inputMaterial {
-      background-color: transparent;
-      border-color: $white;
-    }
-  }
+
 }
 
 //JUST FOR THE HOME PANEL
@@ -205,13 +192,14 @@
 //STEP TWO
 .block.step-two {
   background-color: $brand-one;
+  *:not(a):not(button){
+    color:$white;
+  }
   form {
     margin-top: 0.5rem;
     ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
       color: $brand-one;
-
     }
-
     ::-moz-placeholder { /* Firefox 19+ */
       color: $brand-one;
     }
@@ -223,9 +211,40 @@
     :-moz-placeholder { /* Firefox 18- */
       color: $brand-one;
     }
-
   }
-
+  form{
+    input{
+      color:$white;
+    }
+    .group.tabbed {
+      ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        color: $brand-one;
+      }
+      ::-moz-placeholder { /* Firefox 19+ */
+        color: $brand-one;
+      }
+      :-ms-input-placeholder { /* IE 10+ */
+        color: $brand-one;
+      }
+      :-moz-placeholder { /* Firefox 18- */
+        color: $brand-one;
+      }
+    }
+  }
+  form {
+    legend {
+      h4 {
+        color: $white;
+      }
+    }
+    label {
+      color: $white;
+    }
+    .inputMaterial {
+      background-color: transparent;
+      border-color: $white;
+    }
+  }
 }
 
 //STEP THREE
