--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -15,7 +15,7 @@
   }
   @media only screen and (max-width: 600px) {
     //padding: 2rem 2rem 2rem 2rem;
-    text-align: right;
+    //text-align: right;
   }
 
   .slider {
@@ -34,7 +34,7 @@
       padding: 2rem 6rem 2rem 2rem;
       height: 100%;
       display: inline-flex!important;
-      justify-content: flex-end;
+      justify-content: flex-start;
       align-items: flex-end;
       @media only screen and (max-width: 1000px) {
       }
