--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -31,6 +31,7 @@
       }
     }
     .inner_slide {
+      min-height: 400px;
       padding: 2rem 6rem 2rem 2rem;
       height: 100%;
       display: inline-flex!important;
