updated as per : 0001198
http://bugs.imagiweb.co.uk/view.php?id=1198
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -50,8 +50,8 @@ button{
     padding: 15px 25px;
   }
   &.alt{
-    background-color: $white;
-    color: $brand-one;
+    background-color: $white!important;
+    color: $brand-one!important;
   }
 
 }
@@ -144,8 +144,8 @@ input[type=number] {
     padding: 15px 25px;
   }
   &.alt{
-    background-color: $white;
-    color: $brand-one;
+    background-color: $white!important;;
+    color: $brand-one!important;
   }
 }
 
