--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -33,6 +33,7 @@ footer {
     .block.copy {
       flex-direction: column;
       z-index: 1;
+      position: relative;
       @media only screen and (min-width: 750px) {
         height: 5vh;
       }
