updates in respose to mantis
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/scss/_draw-styles.scss
+++ b/scss/_draw-styles.scss
@@ -191,7 +191,7 @@
 //STEP TWO
 .block.step-two {
   background-color: $brand-one;
-  *:not(a):not(button) {
+  *:not(a):not(button):not(select) {
     color: $white;
   }
   form {
