--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -119,20 +119,27 @@ input.inputMaterial.not-required ~ label{
   }
   .autotabbed {
     input {
+
       &:nth-child(1) {
         max-width: 40px;
         border: none;
+        border-bottom: 1px solid black;
+
         text-align: center;
       }
       &:nth-child(2) {
         max-width: 40px;
         border: none;
+        border-bottom: 1px solid black;
+
         text-align: center;
 
       }
       &:nth-child(3) {
         max-width: 60px;
         border: none;
+        border-bottom: 1px solid black;
+
         text-align: left;
         padding-left: 5px;
       }
