--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -24,8 +24,8 @@
     .slick-list, .slick-track {
       height: 100%;
       min-height: 400px;
-      .slick-slide{
-        &>div{
+      .slick-slide {
+        & > div {
           height: 100%;
         }
       }
@@ -34,7 +34,7 @@
       min-height: 400px;
       padding: 2rem 6rem 2rem 2rem;
       height: 100%;
-      display: inline-flex!important;
+      display: inline-flex !important;
       justify-content: flex-start;
       align-items: flex-end;
       @media only screen and (max-width: 1000px) {
@@ -68,6 +68,16 @@
         display: inline-block;
         background-color: $darkgray;
         max-width: 70%;
+      }
+      p {
+        margin-bottom: 0;
+        text-transform: inherit;
+        padding: .5rem 1rem;
+        display: inline-block;
+        background-color: $darkgray;
+      }
+      a{
+        display: inline-block;
       }
     }
   }
