--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -150,11 +150,14 @@ h1 {
     font-size: $header-size * 1.2;
     font-weight: 800;
   }
-  @media only screen and (max-width: 1000px) {
+  @media only screen and (max-width: 1300px) {
     font-size: $header-size / 1.2;
   }
+  @media only screen and (max-width: 1000px) {
+    font-size: $header-size / 1.3;
+  }
   @media only screen and (max-width: 750px) {
-    font-size: $header-size / 1.5;
+    font-size: $header-size / 1.4;
   }
 }
 
@@ -289,6 +292,8 @@ a {
   color: $link-color;
   text-decoration: none;
   z-index: 20;
+  font-size: $paragraph-size;
+
   position: relative;
   pointer-events: initial;
 
