--- a/scss/_draw-styles.scss
+++ b/scss/_draw-styles.scss
@@ -195,7 +195,7 @@
     color: $white;
   }
   select{
-    background-color:$white;
+    background-color:$white!important;
   }
   form {
     margin-top: 0.5rem;
