--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -288,3 +288,17 @@ input[type=number]::-webkit-outer-spin-button {
 input[type='number'] {
   -moz-appearance:textfield;
 }
+.group.tabbed {
+  ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: $brand-one;
+  }
+  ::-moz-placeholder { /* Firefox 19+ */
+    color: $brand-one;
+  }
+  :-ms-input-placeholder { /* IE 10+ */
+    color: $brand-one;
+  }
+  :-moz-placeholder { /* Firefox 18- */
+    color: $brand-one;
+  }
+}
