--- a/scss/_draw-styles.scss
+++ b/scss/_draw-styles.scss
@@ -22,15 +22,20 @@
   }
   .inner_top {
     padding: 1rem;
+    flex: 1 1 auto!important;
+
   }
   .inner_mid {
     padding: 1rem;
+    flex: 1 1 auto!important;
+
     @media only screen and (max-width: 900px) {
 
     }
   }
   .inner_bottom {
     padding: 1rem;
+    flex: 1 1 auto!important;
   }
   & .text-left {
     text-align: left;
@@ -166,12 +171,21 @@
     }
   }
   .inner_mid {
+    display: inline-flex;
+
     @media only screen and (min-width: 1000px) {
       flex: 1 1 400px;
     }
     h2 {
       color: $brand-one;
       width: 100%;
+      flex: 1 0 auto;
+
+      @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+        /* IE10+ CSS styles go here */
+        max-width: 300px;
+      }
+
     }
     input[type=number] {
       width: 130px;
@@ -179,6 +193,15 @@
     }
     .options-wrap {
       width: 100%;
+      @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+        /* IE10+ CSS styles go here */
+        max-width: 300px;
+        display: inline-flex;
+        flex-wrap: wrap;
+        *{
+          flex: 1 0 auto;
+        }
+      }
     }
   }
   .inner_bottom {
