0001231: Date of Birth fields should display placeholders
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -74,20 +74,20 @@ input[type=number] {
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: $white;
+  color: $brand-one;
 
 }
 
 ::-moz-placeholder { /* Firefox 19+ */
-  color: $white;
+  color: $brand-one;
 }
 
 :-ms-input-placeholder { /* IE 10+ */
-  color: $white;
+  color: $brand-one;
 }
 
 :-moz-placeholder { /* Firefox 18- */
-  color: $white;
+  color: $brand-one;
 }
 
 
