--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -53,7 +53,7 @@ button{
     background-color: $white!important;
     color: $brand-one!important;
     &:hover {
-      background-color: $brand-one!important;
+      background-color: $grey!important;
       color: $white!important;
       outline: none;
 
