updates to footer copy
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -35,8 +35,10 @@ footer {
       z-index: 1;
       position: relative;
       @media only screen and (min-width: 750px) {
-        height: 5vh;
+        max-width: 60%;
+
       }
+      padding: 0.5rem;
     }
   }
   .inner_wrapper.acred {
