--- a/scss/_draw-styles.scss
+++ b/scss/_draw-styles.scss
@@ -328,18 +328,12 @@ div.block.step-two {
   textarea:-webkit-autofill.edge-autofill,
   textarea:-webkit-autofill.edge-autofill:hover
   textarea:-webkit-autofill.edge-autofill:focus,
-  select:-webkit-autofill.edge-autofill,
-  select:-webkit-autofill.edge-autofill:hover,
-  select:-webkit-autofill.edge-autofill:focus,
   input:-webkit-autofill,
   input:-webkit-autofill:hover,
   input:-webkit-autofill:focus
   textarea:-webkit-autofill,
   textarea:-webkit-autofill:hover
-  textarea:-webkit-autofill:focus,
-  select:-webkit-autofill,
-  select:-webkit-autofill:hover,
-  select:-webkit-autofill:focus {
+  textarea:-webkit-autofill:focus{
     -webkit-text-fill-color: $white;
     -webkit-box-shadow: 0 0 0px 1000px transparent inset;
     transition: background-color 5000s ease-in-out 0s;
