--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -50,6 +50,7 @@
         display: inline-block;
         padding: .5rem 1rem;
         margin: 0.5rem 0;
+        font-size: 1.5rem;
         &:nth-of-type(1) {
           background-color: rgba($black, 0.7);
         }
