new image assets and max width on image in email
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/scss/_draw-styles.scss
+++ b/scss/_draw-styles.scss
@@ -89,7 +89,7 @@
     }
   }
   .inner_mid {
-    background: url("../img/versus.png") center 110% / contain no-repeat,
+    background: url("../img/wave_draw.png") center 100% / contain no-repeat,
     linear-gradient(to right, rgba($black, 0.8) 0%, rgba($black, 0.8) 100%),
     url("../img/draw-image.jpg") center center / cover no-repeat;
     @media only screen and (max-width: 1000px) {
