--- a/scss/_page-states.scss
+++ b/scss/_page-states.scss
@@ -6,7 +6,7 @@
         color: #000;
         .inner_slide {
           background:
-                  url('../img/curve.png') top center / contain no-repeat,
+                  url('../img/top_wave.png') top center / contain no-repeat,
                   url('../img/hero-one.jpg') center center / cover no-repeat,
           linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%);
           @media only screen and (max-width: 750px) {
@@ -14,7 +14,7 @@
           }
           @media only screen and (min-width:751px) and (max-width: 1466px){
             background:
-                    url('../img/curve.png') top center / contain no-repeat,
+                    url('../img/top_wave.png') top center / contain no-repeat,
                     url('../img/hero-one-narrow.jpg') center center / cover no-repeat,
                     linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%);
           }
@@ -24,7 +24,7 @@
         color: #000;
         .inner_slide {
           background:
-                  url('../img/curve.png') top center / contain no-repeat,
+                  url('../img/top_wave.png') top center / contain no-repeat,
                   url('../img/hero-two.jpg') center center / cover no-repeat,
                   linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%);
           @media only screen and (max-width: 750px) {
@@ -64,7 +64,7 @@
         div.slick-slide:nth-of-type(1) {
           .inner_slide {
             background:
-                    url('../img/curve.png') top center / contain no-repeat,
+                    url('../img/top_wave.png') top center / contain no-repeat,
                     url('../img/second-chance-hero.jpg') top center / cover no-repeat,
                     linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%);
             @media only screen and (max-width: 750px) {
@@ -76,7 +76,7 @@
         div.slick-slide:nth-of-type(2) {
           .inner_slide {
             background:
-                    url('../img/curve.png') top center / contain no-repeat,
+                    url('../img/top_wave.png') top center / contain no-repeat,
                     url('../img/hero-two.jpg') center center / cover no-repeat,
                     linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%);
             @media only screen and (max-width: 750px) {
