--- a/scss/_draw-styles.scss
+++ b/scss/_draw-styles.scss
@@ -348,6 +348,16 @@ div.block.step-two {
     transition: background-color 5000s ease-in-out 0s;
   }
 
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus,
+  option:-webkit-autofill,
+  option:-webkit-autofill:hover,
+  option:-webkit-autofill:focus{
+    color: $white;
+    -webkit-text-fill-color: $white;
+  }
+
 
   //EDGE{
   input.edge-autofilled,select.edge-autofilled{
