--- a/scss/_page-states.scss
+++ b/scss/_page-states.scss
@@ -33,6 +33,19 @@
           }
         }
       }
+      div.slick-slide:nth-of-type(3) {
+        color: #000;
+        .inner_slide {
+          background:
+                  //url('../img/top_wave.png') top center / contain no-repeat,
+                  url('../img/hero-three.jpg') center center / cover no-repeat,
+                  linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%);
+          @media only screen and (max-width: 750px) {
+            background: linear-gradient(to bottom, rgba(32, 124, 202, 0) 0%, rgba(16, 62, 101, 0) 50%, rgba(8, 30, 48, 0.3) 76%, rgba(0, 0, 0, 0.5) 100%), url('../img/hero-three-mobile.jpg') center center / cover no-repeat;
+
+          }
+        }
+      }
     }
   }
 }
